Fixed chat widget size on mobile.
Fixed the chat widget size on mobile so that it fills the entire screen.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -132,9 +132,9 @@ section.section {
 .widget-container * { outline: none; }
 @media screen and (max-width: 800px){
   .widget-container {
-    height: inherit !important;
+    height: 100% !important;
   }
   .conversation-container {
-    height: 88vh !important;
+    height: 100% !important;
   }
 }
